--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,9 @@ h1{
 }
 
 /*Classe hide*/
-/*.hide{
+.hide{
     display: none !important;
-}*/
+}
 
 /*Placar*/
 #scoreboard-container{
@@ -109,5 +109,4 @@ h1{
     background-color: black;
     color: white;
     padding: 20px;
-    display: none;
 }
